--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>前端设计模式</title>
 </head>
 <body>
-    
+    <p>1</p>
+    <p>2</p>
+    <p>3</p>
+    <p>4</p>
+<script>
+
+</script>
 </body>
 </html>
